<resources>
    <string name="app_name">HealthLens</string>
    <string name="title_actionbar_result">Detection Result</string>
    <string name="content_desc_logo_motto">HealthLens, mind your skin health</string>
    <string name="content_desc_illustration_landing">Face scan illustration</string>
    <string name="content_text_title_landing">You have skin concern? Don’t worries.....</string>
    <string name="content_text_desc_landing">HealthLens can be developed your skin with dermatologist and customized for you. Detect your face, discover solution and best recommendation products skincare.</string>
    <string name="text_btn_get_started">Get Started</string>
    <string name="prompt_yes">Yes</string>
    <string name="prompt_ok">OK</string>
    <string name="prompt_try_again">Try again</string>
    <string name="prompt_cancel">Cancel</string>
    <string name="title_confirmation">Confirmation</string>
    <string name="title_error">Error</string>
    <string name="message_confirmation_upload">Are you sure you want to upload this photo?</string>
    <string name="message_want_logout">Are you sure you want to exit the app?</string>
    <string name="message_error">There seems to be a problem. Please try again …</string>
    <string name="text_menu_language">Language</string>
    <string name="tv_choose_detection">Choose Detection</string>
    <string name="text_content_desc_skin_problems">Picture Skin Problems</string>
    <string name="text_content_desc_skin_type">Picture Skin Type</string>
    <string name="title_skin_problems">Skin Problems</string>
    <string name="text_content_desc_icon_arrow">Click here</string>
    <string name="detail_skin_problems">Can detect Acne, Wrinkles, Dark Spots, and Puff Eyes</string>
    <string name="title_skin_type">Skin Type</string>
    <string name="detail_skin_type">Can detect Normal Skin, Dry Skin, Oily Skin and Sensitive Skin</string>
    <string name="title_information">Information</string>
    <string name="desc_information_home">It’s new innovation with technology and dematologist. This app can be scan your skin type and skin problem, plus we can give solution and best skincare for result!</string>
    <string name="title_guideline">Take a Photo\'s here!</string>
    <string name="rules1">Remove your make up and sunglasses</string>
    <string name="rules2">Pull your hair back</string>
    <string name="rules3">Take a selfie</string>
    <string name="rules4">Keep expression neutral</string>
    <string name="rules5">For the best result, make sure your camera got stable</string>
    <string name="process">Process</string>
    <string name="btn_take_selfie">Take a Selfie</string>
    <string name="btn_upload_from_gallery">Upload from gallery</string>
    <string name="content_desc_icon_back">Back to previous page</string>
    <string name="content_desc_switch_camera">Change camera</string>
    <string name="content_desc_btn_capture">Take a picture</string>
    <string name="btn_try_again">Try Again</string>
    <string name="title_result">Result</string>
    <string name="tv_summary">Summary</string>
    <string name="title_recomendation">Recommendation</string>
    <string name="desc_information_result">The result is based on probability results. The highest probability, it\'s more likely to become the result. For the best result, please refers to the guideline for taking the picture</string>
    <string name="list_recomendation">Wash your face up to 2 time a day Don’t forget to use mosturizer</string>
    <string name="title_produk">Garnier Facial Wash</string>
    <string name="text_dialog_detect_photo">Detecting photo, please wait …</string>
    <string name="tv_product_recommendation">Product Recommendation</string>
    <string name="btn_back_home">Back to Home</string>
    <string name="btn_detect_again">Detect Again</string>
    <string name="content_desc_product_photo">Product Photo</string>
    <string name="btn_buy_here">Buy here</string>
    <string name="failed_take_picture">Failed to take picture</string>
    <string name="failed_bring_up_camera">Failed to bring up camera</string>
    <string name="not_getting_permission">Not getting permission</string>
    <string name="text_dialog_getting_result">Getting result …</string>
</resources>